mobile view z-index issue fixed

--- a/src/assets/scss/elements/_product.scss
+++ b/src/assets/scss/elements/_product.scss
@@ -1594,7 +1594,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    z-index: 10003;
+    z-index: 90;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
